2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: I did'nt upload in previous commit the changelog.

	* include/functions_gis.php: refactor the name of function "addPoint"
	to "addAgentPoint". In function "get_agent_icon_map" add new parameter
	$status for pass the status.
	
	* include/javascript/openlayers.pandora.js: add function "js_addAgentPoint"
	is same more or less "js_addPoint" and too for "js_addAgentPointExtent" and
	"js_addPointExtent".

	* operation/gis_maps/render_view.php: add the id_parent in the call of
	"addAgentPoint".
	
	* operation/gis_maps/ajax.php: clean source code and add the id_parent to
	return json for each agent.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "addPath" fix the query to extract
	the path from a time.
	
	* operation/agentes/gis_view.php: add no-ajax control for filter the time
	to show path.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "addPath" add the parameter
	$history_time for to set limit in seconds to past where to start path.
	Use new parameter in function "getAgentMap".

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/gis_view.php: change the empty message to standar.
	
	* godmode/menu.php: change the text of visual console builder and GIS map
	builder, and move to down the Conection GIS editor.
	
	* godmode/gis_maps/configure_gis_map.php: change some text.
	
	* godmode/gis_maps/index.php: use new header.
	
	* godmode/reporting/map_builder.php: change some text.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: change the setup params "maxExtent",
	"maxResolution", "numZoomLevels" from map to baselayer. Add new function
	"getAgentsLayer" to get agent info of agents in layer, but only agents not
	in group in layer. 
	
	* operation/gis_maps/render_view.php: use new function "getAgentsLayer".
